adding svg and class-names in navbar

--- a/code/index.html
+++ b/code/index.html
@@ -16,11 +16,11 @@
         <div></div>
       </div>
       <nav>
-        <img src="./logo.svg" alt="" class="header-logo">
-        <a href="#" class="part-2">Sport</a>
+        <img src="./Patterns.svg" alt="" class="header-logo">
+        <a href="#" class="ipad-view">Sport</a>
         <a href="#">Economy</a>
         <a href="#">World</a>
-        <a href="#" class="part-2">Culture</a>
+        <a href="#" class="ipad-view">Culture</a>
       </nav>
     </header>
 
