Added changes from feedback

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
 
     <div>
 
-      <img class="header-image" src="background-image.jpg" alt="header-image" >
+      <img class="header-image" src="background-image.jpg" alt="header image" >
 
     </div>
 
@@ -22,7 +22,7 @@
 
       <div class="site-name">
 
-      <img src="hiclipart.com.png" class="img-logo" alt="company-logo"> 
+      <img src="hiclipart.com.png" class="img-logo" alt="company logo"> 
 
       <h1>Techtrends</h1>
 
@@ -33,7 +33,7 @@
       <span class="navbar-link"><a class="link-desktop-navbar" href="" alt="link" target="_blank">News</a></span>
       <span class="navbar-link"><a class="link-desktop-navbar" href="" alt="link" target="_blank">Sports</a></span>
       <div class="site-name-tablet">
-        <img src="hiclipart.com.png" class="img-logo" alt="company-logo"> 
+        <img src="hiclipart.com.png" class="img-logo" alt="company logo"> 
         <h1>Techtrends</h1>
         </div>
       <span class="navbar-link"><a class="link-desktop-navbar" href="" alt="link" target="_blank">Culture</a></span>
@@ -45,7 +45,7 @@
   
       <section class="big-news">
         
-        <img class="img-big-news" src="technigo-class-2020.PNG" alt="image-big-news" >
+        <img class="img-big-news" src="technigo-class-2020.PNG" alt="image big news" >
 
         <div class="big-news-text">
 
@@ -95,9 +95,9 @@
 
     <footer>
       
-      <a class="link-footer" href="https://facebook.com" alt="link-facebook" target="_blank"> <img src="fb_icon_325x325.png"></a>
-      <a class="link-footer" href="https://instagram.com" alt="link-instagram" target="_blank"> <img src="Instagram_AppIcon_Aug2017.png"></a>
-      <a class="link-footer" href="https://twitter.com" alt="link-twitter" target="_blank"> <img src="twitter.png"></a>
+      <a class="link-footer" href="https://facebook.com" alt="link facebook" target="_blank"> <img src="fb_icon_325x325.png"></a>
+      <a class="link-footer" href="https://instagram.com" alt="link instagram" target="_blank"> <img src="Instagram_AppIcon_Aug2017.png"></a>
+      <a class="link-footer" href="https://twitter.com" alt="link twitter" target="_blank"> <img src="twitter.png"></a>
 
     </footer>
 
