--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,115 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <head>
+        <meta charset="utf-8"/>
+        <title>Project 2: The News Site</title>
+        <link rel="stylesheet" href="./style.css"/>
+        <meta name="keywords" content="HTML,CSS,grids, assignment">
+        <meta name="author" content="Lisa Öjeland">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    </head>
+    <body>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
-</html>
+        <header>
+            <div class="navdiv">
+                <img class="logo" src="logo.svg" alt="logo">
+                <ul class="menu">
+                    <a href="#">Magazines</a>
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
+                </ul>
+                <div class="hamburger">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </header>
+        <div class="wrapper">
+            <section class="bignews">
+
+                <div class="bignews">
+                    <img src="nature/readwaterlandscape.jpg" alt="read in nature" class="bigimg">
+                    <div class="bignewstxt">
+                        <h1>Feature of the week: Nature images reduce stress! Read all about it...
+                        </h1>
+                    </div>
+                </section>
+                <section class="cards">
+
+                    <div class="card">
+                        <img src="nature/brygga.jpg" alt="be in nature" class="cardimg">
+                        <div class="cardtxt">
+                            <h2>topic</h2>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="nature/bathh.jpg" alt="be in nature" class="cardimg">
+                        <div class="cardtxt">
+                            <h2>topic</h2>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="nature/bookish.jpg" alt="be in nature" class="cardimg">
+                        <div class="cardtxt">
+                            <h2>topic</h2>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="nature/falls.jpg" alt="be in nature" class="cardimg">
+                        <div class="cardtxt">
+                            <h2>topic</h2>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="nature/green.jpg" alt="be in nature" class="cardimg">
+                        <div class="cardtxt">
+                            <h2>topic</h2>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="nature/house.jpg" alt="be in nature" class="cardimg">
+                        <div class="cardtxt">
+                            <h2>topic</h2>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="nature/mag.jpg" alt="be in nature" class="cardimg">
+                        <div class="cardtxt">
+                            <h2>topic</h2>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="nature/tree.jpg" alt="be in nature" class="cardimg">
+                        <div class="cardtxt">
+                            <h2>topic</h2>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
+
+                </section>
+            </div>
+            <!--endwrapper-->
+        </body>
+        <footer>
+            <a href="https://www.linkedin.com/in/lisa-ojeland-5a95bb5a">
+                <h2>Click and connect to know the Fab Mag team</h2>
+            </a>
+            <a href="https://www.linkedin.com/in/lisa-ojeland-5a95bb5a">&copy;Lisa</a>
+        </footer>
+    </html>
