--- a/code/index.html
+++ b/code/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <link rel="icon"
-    href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/avocado_1f951.png">
-  <title>DAILY AVOCADO</title>
+    href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/high-voltage-sign_26a1.png">
+  <title>NEWS SITE</title>
 </head>
 
 <body>
@@ -21,82 +21,26 @@
       <div></div>
       <div></div>
     </div>
-    <div class="avocado">🥑</div>
+    <H1 class="page-title">NY Times open API</H1>
     <nav>
-      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">RIPE NEWS</a>
-      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">AVOCADO TV</a>
-      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">RECEPIES</a>
+      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">LATEST NEWS</a>
+      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">LATEST NEWS</a>
+      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">LATEST NEWS</a>
     </nav>
   </header>
 
-  <div class="latest-news">
-    <div class="latest-news-content">
-      <h2>RIGHT NOW:</h2>
-      <h3>AVOCADOS CAN FLY</h3>
-    </div>
-  </div>
-
-
-  <section class="main-news-container">
-    <section class="main-news-cards">
-      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
-        <img src="/images/main-avocado.jpeg" alt="avocado">
-        <h4>EXPERTS: AVOCADOS ARE RUNNING OUT</h4>
-      </a>
-    </section>
-  </section>
+  <section class="news">
+    <article id="mainNewsCard" class="main-news-card"></article>
   </section>
 
-  <section class="grid-news-container">
-    <p>🥑 MORE AVOCADO NEWS 🥑</p>
-    <section class="container">
-      <section class="news-cards">
-        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
-          <img src="/images/grid-avocado.jpeg" alt="avocado">
-          <h4>THE LAST AVOCADO</h4>
-        </a>
-        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
-          <img src="/images/grid-avocado.jpeg" alt="avocado">
-          <h4>THE LAST AVOCADO</h4>
-        </a>
-        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
-          <img src="/images/grid-avocado.jpeg" alt="avocado">
-          <h4>THE LAST AVOCADO</h4>
-        </a>
-        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
-          <img src="/images/grid-avocado.jpeg" alt="avocado">
-          <h4>THE LAST AVOCADO</h4>
-        </a>
-        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
-          <img src="/images/grid-avocado.jpeg" alt="avocado">
-          <h4>THE LAST AVOCADO</h4>
-        </a>
-      </section>
-    </section>
+  <section class="news grid">
+    <article id="gridNewsCard" class="grid-news-card"></article>
   </section>
-
-  <section class="other-news-container">
-    <p>🥑 FRESH RECEPIES 🥑</p>
-    <section class="container">
-      <section class="other-news-cards">
-        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
-          <img src="/images/other-avocado.jpeg" alt="avocado">
-          <h4>GUCAMOLE RECEPIE FOR THE WHOLE FAMILY</h4>
-        </a>
-        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
-          <img src="/images/other-avocado.jpeg" alt="avocado">
-          <h4>GUCAMOLE RECEPIE FOR THE WHOLE FAMILY</h4>
-        </a>
-      </section>
-    </section>
-  </section>
-
   <footer>
-    <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">🥑 FIND ME ON LINKEDIN</a>
-    <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">🥑 FIND ME ON LINKEDIN</a>
-    <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">🥑 FIND ME ON LINKEDIN</a>
+    <p>This is a Technigo Bootcamp Project by Johanna Åstrand</p>
+    <p>Thank you Developmer NY Times for the open API!</p>
   </footer>
-
+  <script src="/code/script.js"></script>
 </body>
 
 </html>
