added media queries

--- a/code/index.html
+++ b/code/index.html
@@ -33,12 +33,15 @@
     <article id="mainNewsCard" class="main-news-card"></article>
   </section>
 
-  <section class="news grid">
+  <section class="news-grid">
+    <p class="more-news">More news</p>
     <article id="gridNewsCard" class="grid-news-card"></article>
   </section>
+
   <footer>
     <p>This is a Technigo Bootcamp Project by Johanna Åstrand</p>
-    <p>Thank you Developmer NY Times for the open API!</p>
+    <p>Thanks for <a href="https://developer.nytimes.com/" target="_blank">Developer @ NY Times for the open API!</a>
+    </p>
   </footer>
   <script src="/code/script.js"></script>
 </body>
