removed old items and finished project

--- a/code/index.html
+++ b/code/index.html
@@ -42,6 +42,7 @@
     <p>This is a Technigo Bootcamp Project by Johanna Åstrand</p>
     <p>Thanks for <a href="https://developer.nytimes.com/" target="_blank">Developer @ NY Times for the open API!</a>
     </p>
+    <p><a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">🥑 FIND ME ON LINKEDIN</a></p>
   </footer>
   <script src="/code/script.js"></script>
 </body>
