changed path to fix deployed version

--- a/code/index.html
+++ b/code/index.html
@@ -44,7 +44,7 @@
     </p>
     <p><a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">🥑 FIND ME ON LINKEDIN</a></p>
   </footer>
-  <script src="/code/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
