changed path to work on the deployed version

--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <header>
-    <img src="/images/logo.svg" alt="technigo-logo">
+    <img src="logo.svg" alt="technigo-logo">
     <div class="hamburger">
       <div></div>
       <div></div>
