--- a/code/index.html
+++ b/code/index.html
@@ -108,7 +108,7 @@
         </body>
         <footer>
             <a href="https://www.linkedin.com/in/lisa-ojeland-5a95bb5a">
-                <h2>Click and connect to know the Fab Mag team</h2>
+                <h2>Click and connect to the fictional Fab team</h2>
             </a>
             <a href="https://www.linkedin.com/in/lisa-ojeland-5a95bb5a">&copy;Lisa</a>
         </footer>
