--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <section class="big-news">
-    <img src="hans-reniers-lQGJCMY5qcM-unsplash.jpg" alt="Image of glass containers">
+    <img src="hans-reniers-lQGJCMY5qcM-unsplash.jpg" alt="glass containers">
     <article class="big-news-text">
       <a href="#" target="_blank">
         <h2>The biggest medical discoveries of 2019</h2>
