minor code cleanup

--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Uplifting News!</title>
-    <link rel="icon" href="images/book.png" />
+    <link rel="icon" href="images/book.svg" />
     <link rel="stylesheet" href="./style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Major+Mono+Display&display=swap"
@@ -18,16 +18,13 @@
 
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
-
       <div class="left-header-container">
-        <div class="hamburger">
+        <!-- <div class="hamburger">
           <div></div>
           <div></div>
           <div></div>
-        </div>
-
-        <img src="images/book.png" alt="Newspaper logo" />
+        </div> -->
+        <img src="images/book.svg" alt="Newspaper logo" />
       </div>
 
       <div class="container-upliftingnews">
@@ -43,7 +40,7 @@
       </nav>
     </header>
     <div class="center-news-containers">
-      <!-- The big news content -->
+      
       <section class="big-news-container">
         <h2>
           Research shows: Getting deliveries from UPS dogs instead of humans
@@ -70,52 +67,38 @@
       <!-- Other news  -->
       <div class="small-news-container">
         <section class="small-news-card">
-          <div>
             <h3>These are tiny news!</h3>
             <img src="images/puppy.jpg" alt="Small news image" />
-          </div>
         </section>
 
         <section class="small-news-card">
-          <div>
             <h3>These are tiny news!</h3>
             <img src="images/puppy.jpg" alt="Small news image" />
-          </div>
         </section>
 
         <section class="small-news-card">
-          <div>
             <h3>These are tiny news!</h3>
             <img src="images/puppy.jpg" alt="Small news image" />
-          </div>
+        </section>
+
+        <section class="small-news-card">  
+            <h3>These are tiny news!</h3>
+            <img src="images/puppy.jpg" alt="Small news image" />
         </section>
 
         <section class="small-news-card">
-          <div>
             <h3>These are tiny news!</h3>
             <img src="images/puppy.jpg" alt="Small news image" />
-          </div>
         </section>
 
         <section class="small-news-card">
-          <div>
             <h3>These are tiny news!</h3>
             <img src="images/puppy.jpg" alt="Small news image" />
-          </div>
         </section>
 
         <section class="small-news-card">
-          <div>
             <h3>These are tiny news!</h3>
             <img src="images/puppy.jpg" alt="Small news image" />
-          </div>
-        </section>
-
-        <section class="small-news-card">
-          <div>
-            <h3>These are tiny news!</h3>
-            <img src="images/puppy.jpg" alt="Small news image" />
-          </div>
         </section>
       </section>
     </div>
