added meta og properties

--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="./style.css" />
   <link href="https://fonts.googleapis.com/css?family=Radley|Roboto&display=swap" rel="stylesheet">
   <link rel="icon" href="banana-logo.png">
+  <meta property="og:url" content="https://ripebananas.netlify.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Project 2: The News Site" />
+  <meta property="og:description" content="Mock news site focusing on bananas" />
+  <meta property="og:image" content="movie-project.png" />
 </head>
 
 <body>
