removed error in class names

--- a/code/index.html
+++ b/code/index.html
@@ -48,8 +48,8 @@
 
   <!-- Other news  -->
 
-  <section class="other-news-wrapper">
-    <section aria-label="other banana news container" class="small-news-cards">
+  <section class="other-news">
+    <section aria-label="other banana news container" class="small-news-card">
 
       <a href="https://www.independent.co.uk/life-style/christmas/food-drink/japan-dt-farm-edible-peel-bananas-ice-age-method-a8130826.html"
         target="_blank">
