--- a/code/index.html
+++ b/code/index.html
@@ -6,32 +6,28 @@
   <title>Tree Times</title>
   <link rel="stylesheet" href="./style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
   <header>
-    <!-- Some kind of logo and navbar -->
     <nav>
       <ul>
         <li><a href="#">Pine</a></li>
         <li><a href="#">Fir</a></li>
-        <li class="logo"><a href="#"><img
-              src="https://upload.wikimedia.org/wikipedia/commons/2/24/Tidningarnas_Telegrambyr%C3%A5_logo.svg"
-              alt="Tree Times"><span>Tree Times</span></a></li>
+        <li class="logo"><a href="#"><img src="assets/tt.svg" alt="Tree Times"><span>Tree Times</span></a></li>
         <li><a href="#">Birch</a></li>
         <li><a href="#">Oak</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- The big news content -->
+  <!-- Big news content -->
 
   <section class="big-news">
 
     <figure>
       <a href="#">
-        <img src="https://images.unsplash.com/photo-1511497584788-876760111969" alt="Big News">
+        <img src="assets/photo-1511497584788-876760111969.jpeg" alt="Big News">
       </a>
     </figure>
 
@@ -47,16 +43,14 @@
 
   </section>
 
-  <!-- The other news  -->
+  <!-- Other news  -->
 
   <section class="news-card">
 
     <article>
       <figure>
         <a href="#">
-          <img
-            src="https://images.unsplash.com/photo-1440581572325-0bea30075d9d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800"
-            alt="News 1">
+          <img src="assets/photo-1440581572325-0bea30075d9d.jpeg" alt="News 1">
           <h2>11 Funny Forest Facts</h2>
         </a>
       </figure>
@@ -65,9 +59,7 @@
     <article>
       <figure>
         <a href="#">
-          <img
-            src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?ixlib=rb-1.2.1&auto=format&fit=crop&w=800"
-            alt="News 2">
+          <img src="assets/photo-1473448912268-2022ce9509d8.jpeg" alt="News 2">
           <h2>Deliverance</h2>
         </a>
       </figure>
@@ -76,9 +68,7 @@
     <article>
       <figure>
         <a href="#">
-          <img
-            src="https://images.unsplash.com/photo-1473773508845-188df298d2d1?ixlib=rb-1.2.1&auto=format&fit=crop&w=800"
-            alt="News 3">
+          <img src="assets/photo-1473773508845-188df298d2d1.jpeg" alt="News 3">
           <h2>World’s Oldest Forest</h2>
         </a>
       </figure>
@@ -87,9 +77,7 @@
     <article>
       <figure>
         <a href="#">
-          <img
-            src="https://images.unsplash.com/photo-1505820013142-f86a3439c5b2?ixlib=rb-1.2.1&auto=format&fit=crop&w=800"
-            alt="News 4">
+          <img src="assets/photo-1505820013142-f86a3439c5b2.jpeg" alt="News 4">
           <h2>Mushrooms <br>— Our Real Friends</h2>
         </a>
       </figure>
@@ -98,8 +86,7 @@
     <article>
       <figure>
         <a href="#">
-          <img src="https://images.unsplash.com/photo-1554315802-a5c516cffbfb?ixlib=rb-1.2.1&auto=format&fit=crop&w=800"
-            alt="News 5">
+          <img src="assets/photo-1554315802-a5c516cffbfb.jpeg" alt="News 5">
           <h2>The Trees Are Turning</h2>
         </a>
       </figure>
@@ -108,9 +95,7 @@
     <article>
       <figure>
         <a href="#">
-          <img
-            src="https://images.unsplash.com/photo-1446553009413-64b9505cacb0?ixlib=rb-1.2.1&auto=format&fit=crop&w=800"
-            alt="News 6">
+          <img src="assets/photo-1446553009413-64b9505cacb0.jpeg" alt="News 6">
           <h2>Lost Again?</h2>
         </a>
       </figure>
@@ -119,7 +104,7 @@
     <article>
       <figure>
         <a href="#">
-          <img src="https://images.unsplash.com/photo-1547140741-00d6fd251528?ixlib=rb-1.2.1&auto=format&fit=crop&w=800
+          <img src="assets/photo-1547140741-00d6fd251528.jpeg
         " alt="News 7">
           <h2>How To: Moss Carpet</h2>
         </a>
@@ -130,8 +115,7 @@
 
   <footer>
     <figure class="logo">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Tidningarnas_Telegrambyr%C3%A5_logo.svg"
-        alt="Tree Times">
+      <img src="assets/tt.svg" alt="Tree Times">
     </figure>
   </footer>
 
