edited readme and cleaned up code

--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -17,7 +17,7 @@
     <nav>
       <a href="#">Maps</a>
       <a href="#">Ships</a>
-      <img src="https://image.flaticon.com/icons/svg/1355/1355799.svg" alt="the compass logo" class="nav-logo, logo">
+      <img src="https://image.flaticon.com/icons/svg/1355/1355799.svg" alt="the compass logo" class="nav-logo logo">
       <a href="#">Treasure</a>
       <a href="#">Rum</a>
     </nav>
