html and css base added

--- a/code/index.html
+++ b/code/index.html
@@ -7,17 +7,102 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<!--navbar-->
+  <div class="navbar">
+      <a href="https://twitter.com/?lang=sv">Twitter</a>
+      <a href="https://www.facebook.com/">Facebook</a>
+      <a href="https://www.instagram.com/">Instagram</a> 
+      <a href="https://www.pinterest.com/">Pinterest</a>      
+  </div>
+  
+<!--header-->
+<div class="header-container">
+    <div class="header">
+    <h1>The Feminist Journal</h1>
+    </div>
+</div>  
 
-    <section class="">
-      <!-- The other news  -->
-      <p> i am changing this</p>
-    </section>
+<!-- daily quote-->
+<div class ="quote-container">
+  <div class="quote">
+      <h3 id="quote">Todays Quote</h3>
+      <p class="new-quote">"A woman needs a man as much as a fish needs a bicycle" - Irina Dunn</p>
+  </div>
+</div> 
+
+
+
+
+  
+ <!--Large news--> 
+ <section class="placeholder">
+  <div  class ="large-news-container">
+      <div class="large-news">
+           <h2>This weeks HOW: </h2>
+          <h3>Afford to Divorce</h3>
+           <p>"In Sweden 1/3 of the women who wants a divorce can't afford it"</p>
+      </div>
+  </div>
+
+</section>
+<!--small news-->
+
+<section>
+  <div class="small-news">
+      <h4>Interview</h4>
+      <p>This weeks interview is with famous author and equality advocate Katarina Wennstam </p>
+  </div>
+
+  <div class="small-news">
+       <h4>Column</h4>
+       <p>How to smash the patriarchy</p>
+  </div>
+
+  <div class="small-news">
+      <h4>Book Review</h4>
+      <p>This weeks book review</p>
+  </div>
+  <div class="small-news">
+      <h4>Interview</h4>
+      <p>This weeks interview is with famous author and equality advocate Katarina Wennstam </p>
+  </div>
+
+  <div class="small-news">
+       <h4>Column</h4>
+       <p>How to smash the patriarchy</p>
+  </div>
+
+  <div class="small-news">
+      <h4>Book Review</h4>
+      <p>This weeks book review</p>
+  </div> 
+</section>
+
+
+
+<!-- imgs-->
+
+<div class ="revolution-container">
+  <div class="revolution">
+      <img src="./img/now.jpg" alt="woman with sign">
+      <img src="./img/pillow.jpg" alt="the future is female pillow">
+      <img src="./img/kid.jpg" alt="fight like a girl sign">
+      <img src="./img/sign.jpg" alt="">
+
+  </div>
+</div>
+
+<!--footer-->
+
+<div class="footer-container">
+  <div class="footer">
+    <p class="footertext"> Donate to your local Kvinnojour</p>
+  </div>
+</div>   
+
+
+
+
   </body>
 </html>
