Done most of the HTML and a little css

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,104 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nailtech news</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" type="image/png" href="../images/favicon.ico">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
+      <nav>
+        <ul>
+          <li class="li-1"><img src="../images/favicon-32x32.png"></li>
+          <li class="li-2">Nailtech News</li>
+          <li class="li-3"><a href="http://www.bokadirekt.se">Book a nailtech</a></li>
+          <li class="li-4"><a href="https://lillynails.se/proffs-utbildningar">Become a nailtech</a></li>
+        </ul>
+      </nav>
       <!-- Some kind of logo and navbar -->
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      
+      <div>
+          <h1>Press-on nails, a new trend in 2020?</h1>
+          <p>Get new clients with these custom made press-on nails. Both the good looks and the social distancing!</p>
+      </div>
+      <img src="../images/9.png" alt="Black and yellow nailart with flames">
     </section>
-
-    <section class="">
+    
+    <article class="article-grid">
+    <section class="news">
+      <div>
+        <h2>Do you dare to dream big?</h2>
+        <p>This is why you should, and how to plan it.</p></div>
+      <img src="../images/11.png" alt="Pink nails with blue and white flowers">
       <!-- The other news  -->
     </section>
+
+    <section class="news">
+      <div>
+        <h2>New to social media-marketing? </h2>
+        <p>Learn to market your business on Instagram, gain more followers, new clients AND make some money</p></div>
+      <img src="../images/2.png" alt="Woman with a phone in her hands">
+      <!-- The other news  -->
+    </section>
+
+    <section class="news">
+      <div>
+        <h2>Love or hate? </h2>
+        <p>Other nailtechs, colleagues or enemies?</p></div>
+      <img src="../images/3.png" alt="Dark pink nailart hearts and the text love on them">
+      <!-- The other news  -->
+    </section>
+
+    <section class="news">
+      <div>
+        <h2>Tired of all those clients who just wants the same red color every time?</h2>
+        <p>This is how you get some new clients, and get to create the designs you dream of.</p></div>
+      <img src="../images/4.png" alt="Dark redbrown nails with some subtle glitter">
+      <!-- The other news  -->
+    </section>
+
+    <section class="news">
+      <div>
+        <h2>Crystal nails are pretty awesome, but how do I do it?</h2>
+        <p>Don't worry, we have a beginners guide to all dat bling.</p></div>
+      <img src="../images/5.png" alt="Turqouise nails with a lot of glitter and bling">
+      <!-- The other news  -->
+    </section>
+
+    <section class="news">
+      <div>
+        <h2>SS3? SS10? AB? So you got started with crystal-designs, but what does really all this means?</h2>
+        <p>In this comprehensive crystal-guide you will learn everything that's worth knowing.</p></div>
+      <img src="../images/8.png" alt="Metallic red nails with silver decorations and bling">
+      <!-- The other news  -->
+    </section>
+
+    <section class="news">
+      <div>
+        <h2>Need inspiration?</h2>
+        <p>Here's the best Instagram nail-art accounts to follow.</p></div>
+      <img src="../images/10.png" alt="Light yellow nails with pink cherryflower-buds">
+      <!-- The other news  -->
+    </section>
+
+  <section class="news">
+    <div>
+      <h2>How much would you charge for this set of nails?</h2>
+      <p>Learn to set the pricing right in your salon.</p></div>
+    <img src="../images/6.png" alt="Neon yellow nails with glitter">
+
+
+      <!-- The other news  -->
+    </section>
+
+  </article>
+  
+
+
   </body>
 </html>
