picture added and large news text

--- a/code/index.html
+++ b/code/index.html
@@ -33,16 +33,22 @@
 </div> 
 
 
-
-
-  
  <!--Large news--> 
  <section class="placeholder">
+
+
   <div  class ="large-news-container">
+    <img class="large" src="./img/largenews.jpg" alt="">
       <div class="large-news">
            <h2>This weeks HOW: </h2>
           <h3>Afford to Divorce</h3>
            <p>"In Sweden 1/3 of the women who wants a divorce can't afford it"</p>
+           <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem 
+             ipsumvvlorem ipsumlorem ipsumlorem ipsumvvlorem ipsumvlorem ipsumlorem ipsumlorem ipsumv
+             lorem ipsumlorem ipsumvlorem ipsumvlorem ipsumlorem ipsumvvvlorem ipsumvlorem ipsum
+            vvvlorem ipsumlorem ipsumvlorem ipsumvlorem ipsumvvlorem ipsumvvlorem ipsumvlorem ipsum
+            lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumvlorem ipsumvlorem ipsum</p>
+           
       </div>
   </div>
 
@@ -98,12 +104,12 @@
 
 <div class="footer-container">
   <div class="footer">
-    <p class="footertext"> Donate to your local Kvinnojour</p>
+    <p class="footertext"> Donate to your local women's shelter</p>
   </div>
 </div>   
 
 
 
 
-  </body>
+</body>
 </html>
