--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Noto+Serif+JP:wght@400;500&family=Quicksand:wght@600;700&display=swap" rel="stylesheet">
+    <title>Positive News</title>
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <i class="fa fa-sun-o" style="font-size:45px;"></i>
+        <h1>Positive News</h1>
+
+        <div class="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </header>
 
     <section class="big-news">
@@ -19,6 +31,5 @@
       <!-- The other news  -->
     </section>
 
-    <button>Click</button>
   </body>
 </html>
