basic magazine page

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,97 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>The Skin Cut - A curated skincare magazine</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+ 
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    
+    <header class="navbar">
+ 
+          <a href="" class="linkleft"> Home </a>
+          <a href="" class="linkleft"> About </a>
+          <a href="" class="linkright"> Features </a>
+          <a href="" class="linkright"> Contact us </a>
+   
+        <div class="logo">
+          <img src="./img/skincut.jpg" alt="logo">
+        </div> 
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <img src="./img/creamtexture.jpg" alt="highlight-image">
+      <div class="news-text">
+        <h1>// The one step 6am face //</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tristique eu urna ut congue. 
+          Morbi sit amet quam eget leo iaculis lobortis ac pulvinar odio. Nam convallis odio sapien, 
+          nec faucibus enim faucibus porta. Donec convallis risus sapien, nec aliquet risus fringilla ut. 
+          Sed finibus aliquam sapien non malesuada. Duis condimentum eleifend ornare. Aliquam a orci quam. 
+          Aenean eu mauris nec libero ultrices venenatis id in elit. In metus neque, imperdiet in rhoncus a, tincidunt nec nibh. 
+          Etiam in ex vel erat ultrices consequat nec eu ligula. Pellentesque pharetra, lectus eu lacinia ultricies, elit nibh elementum nisl, eu semper sem nulla quis est. 
+          Quisque non iaculis tortor. Nam mollis sit amet leo ut varius.
+        </p>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <hr>
+    <h2>// read more articles</h2> 
+
+
+    <section class="other-news">
+
+      <article style="background-image: url(./img/bobbibrown.jpg);">
+        <div class="background-mask">
+          <h3>Skin Foundation</h3>
+          <p> Perfection in a bottle, glowy & natural! </p>
+        </div>
+      </article>
+
+      <article style="background-image: url(./img/summeressentials.jpg);">
+        <div class="background-mask">
+          <h3>Skin Summer Essentials</h3>
+          <p>For those hot days</p>
+        </div>
+      </article>
+
+      <article style="background-image: url(./img/ceramidin.jpg);">
+        <div class="background-mask">
+          <h3>Ceramidin</h3>
+          <p>Skin Hero!</p>
+        </div>
+      </article>
+
+      <article style="background-image: url(./img/chanelcc.jpg);">
+        <div class="background-mask">
+          <h3>CC Cream SPF 50</h3>
+          <p>Coverage without comprimising sun protection</p>
+        </div>
+      </article>
+
+      <article style="background-image: url(./img/fiveproduct.jpg);">
+        <div class="background-mask">
+          <h3>The 5 product Face</h3>
+          <p> Easy peasy lemon squeazy!</p>
+        </div>
+      </article>
+
+      <article style="background-image: url(./img/inflightskin.jpg);">
+        <div class="background-mask">
+          <h3> The in-flight Skin Saviours</h3>
+          <p> For those long haul flights</p>
+        </div>
+      </article>
+
+
+      <article style="background-image: url(./img/luna.jpg);">
+        <div class="background-mask">
+          <h3> The Luna</h3>
+          <p> Taking retinol to the next level</p>
+        </div>
+      </article>
+
     </section>
   </body>
 </html>
