Updated responsive design + text style

--- a/code/index.html
+++ b/code/index.html
@@ -26,13 +26,13 @@
       <div class="news-text">
         <h1>// The one step 6am face //</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tristique eu urna ut congue. 
-          Morbi sit amet quam eget leo iaculis lobortis ac pulvinar odio. Nam convallis odio sapien, 
-          nec faucibus enim faucibus porta. Donec convallis risus sapien, nec aliquet risus fringilla ut. 
-          Sed finibus aliquam sapien non malesuada. Duis condimentum eleifend ornare. Aliquam a orci quam. 
-          Aenean eu mauris nec libero ultrices venenatis id in elit. In metus neque, imperdiet in rhoncus a, tincidunt nec nibh. 
-          Etiam in ex vel erat ultrices consequat nec eu ligula. Pellentesque pharetra, lectus eu lacinia ultricies, elit nibh elementum nisl, eu semper sem nulla quis est. 
-          Quisque non iaculis tortor. Nam mollis sit amet leo ut varius.
+          Cold dark mornings have arrived here in Scandinavia and with them that cold air that sucks all the moisture from your skin. 
+          <br />
+          When I work in the morning, I wake up at 6am and let me tell you, there’s no way I’m waking up 10 to 15 minutes earlier to fix my 
+          red cheeks and dark circles.
+          <br />
+          So, I wanted something that will function as an extremely moisturizing day cream and gave me a bit of coverage and yes, as you know,
+          I have quite a few tinted moisturisers/cc creams but none of them feel moisturizing enough to use them on it’s own.
         </p>
       </div>
     </section>
