--- a/code/index.html
+++ b/code/index.html
@@ -27,12 +27,17 @@
         <h1>// The one step 6am face //</h1>
         <p>
           Cold dark mornings have arrived here in Scandinavia and with them that cold air that sucks all the moisture from your skin. 
+          <span class="read-more">
+            <br />
+            When I work in the morning, I wake up at 6am and let me tell you, there’s no way I’m waking up 10 to 15 minutes earlier to fix my 
+            red cheeks and dark circles.
+            <br />
+            So, I wanted something that will function as an extremely moisturizing day cream and gave me a bit of coverage and yes, as you know,
+            I have quite a few tinted moisturisers/cc creams but none of them feel moisturizing enough to use them on it’s own.
+          </span>
           <br />
-          When I work in the morning, I wake up at 6am and let me tell you, there’s no way I’m waking up 10 to 15 minutes earlier to fix my 
-          red cheeks and dark circles.
-          <br />
-          So, I wanted something that will function as an extremely moisturizing day cream and gave me a bit of coverage and yes, as you know,
-          I have quite a few tinted moisturisers/cc creams but none of them feel moisturizing enough to use them on it’s own.
+          
+          <a href="" class="linkread">Read more</a>
         </p>
       </div>
     </section>
