Updated the big-news section with an img, h1, h3 and p.

--- a/code/index.html
+++ b/code/index.html
@@ -25,6 +25,13 @@
 
     <section class="big-news">
       <!-- The big news content -->
+      <img src="" alt="">
+      <h1>FEATURED ARTICLE</h1>
+      <h3>Positive news this week: floating wind farms and other positive news:</h3>
+      <p>
+        A floating wind farm got the go-ahead in Wales and a 
+        study offered hope for better breast cancer treatment.
+      </p>
     </section>
 
     <section class="">
