Added nav section in header and updated the img in the big news section.

--- a/code/index.html
+++ b/code/index.html
@@ -21,11 +21,19 @@
             <div></div>
             <div></div>
         </div>
+
+        <nav>
+          <a href="#">LATEST</a>
+          <a href="#">SECTIONS</a>
+          <a href="#">ABOUT</a>
+          <a href="#">SUPPORT</a>
+          <a href="#">CONTACT</a>          
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
-      <img src="" alt="">
+      <img src="../Images/Sea-and-Windfarm.jpg" alt="Image of the sea with a wind farm in it.">
       <h1>FEATURED ARTICLE</h1>
       <h3>Positive news this week: floating wind farms and other positive news:</h3>
       <p>
