Added a div to contain  logo and title page section in header as well as one to circle and hamburger menu to make it easier to implenent flex-box.

--- a/code/index.html
+++ b/code/index.html
@@ -13,14 +13,20 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <i class="fa fa-sun-o" style="font-size:40px;"></i>
-        <h1>Positive News</h1>
+      <div class="logo-header">
+        <i class="fa fa-sun-o" style="font-size:35px;"></i>
+        <h1>Positive News</h1>      
+      </div>
 
-        <div class="hamburger">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+        <div class="circle-container">
+          <span class="circle"> 
+            <div class="hamburger">
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </span> 
+        </div>     
 
         <nav>
           <a href="#">LATEST</a>
