Addes a div to contain the big-news section text.

--- a/code/index.html
+++ b/code/index.html
@@ -40,12 +40,14 @@
     <section class="big-news">
       <!-- The big news content -->
       <img src="../Images/Sea-and-Windfarm.jpg" alt="Image of the sea with a wind farm in it.">
-      <h1>FEATURED ARTICLE</h1>
-      <h3>Positive news this week: floating wind farms and other positive news:</h3>
-      <p>
-        A floating wind farm got the go-ahead in Wales and a 
-        study offered hope for better breast cancer treatment.
-      </p>
+      <div class="feature-article-text">
+        <h1>FEATURED ARTICLE</h1>
+        <h3>Positive news this week: floating wind farms and other positive news:</h3>
+        <p>
+          A floating wind farm got the go-ahead in Wales and a 
+          study offered hope for better breast cancer treatment.
+        </p>
+      </div>
     </section>
 
     <section class="">
