Updated the div class name for the text section of the big-news section

--- a/code/index.html
+++ b/code/index.html
@@ -40,9 +40,9 @@
     <section class="big-news">
       <!-- The big news content -->
       <img src="../Images/Sea-and-Windfarm.jpg" alt="Image of the sea with a wind farm in it.">
-      <div class="feature-article-text">
+      <div class="big-news-text">
         <h1>FEATURED ARTICLE</h1>
-        <h3>Positive news this week: floating wind farms and other positive news:</h3>
+        <h3>This week: floating wind farms and other positive news</h3>
         <p>
           A floating wind farm got the go-ahead in Wales and a 
           study offered hope for better breast cancer treatment.
