--- a/code/index.html
+++ b/code/index.html
@@ -5,8 +5,8 @@
     <title>The Skin Cut - A curated skincare magazine</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="skincuticon.ico" type="image/x-icon">
+    <link rel="icon" href="skincuticon.ico" type="image/x-icon">
   </head>
  
   <body>
