Added an img tag with logo

--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,8 @@
     <header>
       <!-- Some kind of logo and navbar -->
       <div class="logo-header-container">
-        <i class="fa fa-sun-o" style="font-size:35px;"></i>
+        <!-- <i class="fa fa-sun-o" style="font-size:35px;"></i> -->
+        <img src="../Images/Heart-speechbubbble.svg" alt="Heart in speechbubble image" width="50px" height="50px">
         <h1>Positive News</h1>      
       </div>
 
