Trying to make a first commit

--- a/code/index.html
+++ b/code/index.html
@@ -2,17 +2,36 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>in-season</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img src="images/glassure.png">
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <img src="images/dahlia.jpg">
+      <div>
+        <h2>in-season now:</h2>
+        <h1>Dahlia</h1>
+        <p>The lovely Dahlia.</p>
+        <!--<p>Dahlia is a genus of bushy, tuberous, herbaceous perennial plants native to Mexico and Central America. A member of the Asteraceae (formerly Compositae) family of dicotyledonous plants, its garden relatives thus include the sunflower, daisy, chrysanthemum, and zinnia. There are 42 species of dahlia, with hybrids commonly grown as garden plants.</p>-->
+        <a href="#"><button>Read more</button></a>
+      </div>
+    </section>
+
+    <section class="carousel-news">
+      <div class="carousel-item 1">
+        <img src="images/lady-hat.jpg">
+        <p>Hello</p>
+      </div>
+      <div class="carousel-item 2"><img src="images/lila.jpg"></div>
+      <div class="carousel-item 3"><img src="images/orange.jpg"></div>
+      <div class="carousel-item 4"><img src="images/location.jpg"></div>
+      <div class="carousel-item 5"><img src="images/flowers.jpg"></div>
     </section>
 
     <section class="">
