--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Project 2</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="./logo.svg"></img>
+      <nav>
+        <a class="order-1" href="#">One</a>        
+        <a class="order-2" href="#">Two</a>
+        <a href="#">Three</a>
+        <a href="#">Four</a>
+      </nav>
     </header>
 
     <section class="big-news">
