Added logo and navigation with flexbox

--- a/code/index.html
+++ b/code/index.html
@@ -7,8 +7,16 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
+
     <header>
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="./logo.svg"  alt="Logo" />
+      <nav>
+        <a class="order-1" href="#">One</a>
+        <a class="order-2" href="#">Two</a>
+        <a href="#">Three</a>
+        <a href="#">Four</a>
+      </nav>
     </header>
 
     <section class="big-news">
